@@ -1,5 +1,6 @@
 Changelog for Weeder
 
+    Make --verbose print out the directory when running commands
 0.1.9, released 2017-12-07
     Don't report Win32/unix as unused on the alternate platform
 0.1.8, released 2017-12-06
